--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "@chakra-ui/icons": "2.0.1",
     "@chakra-ui/react": "latest",
-    "@emotion/react": "latest",
+    "@emotion/react": "11.9.0",
     "@emotion/styled": "latest",
     "axios": "0.27.2",
     "framer-motion": "latest",
