--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,6 @@ services:
   app:
     build: .
     ports:
-      - "3000:3000"
-    environment:
-      - REACT_APP_CLIENT_ID=${REACT_APP_CLIENT_ID}
-      - REACT_APP_CLIENT_SECRET=${REACT_APP_CLIENT_SECRET}
+      - "8081:8081"
+    env_file:
+      - .env
