--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,8 +3,10 @@ services:
   app:
     build: .
     ports:
-      - "8081:8081"
+      - "8080:8080"
     environment:
       - REACT_APP_CLIENT_ID=${REACT_APP_CLIENT_ID}
       - REACT_APP_CLIENT_SECRET=${REACT_APP_CLIENT_SECRET}
+      - REACT_APP_GITLAB_APP_ID=${REACT_APP_GITLAB_APP_ID}
+      - REACT_APP_GITLAB_APP_SECRET=${REACT_APP_GITLAB_SECRET}
       - REACT_APP_GITLAB_REDIRECT_URI=${REACT_APP_GITLAB_REDIRECT_URI}
