--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "7.31.3",
+    "react-icons": "^4.4.0",
     "react-login-github": "^1.0.8",
     "react-router": "6.3.0",
     "react-router-dom": "6.3.0",
